# CtxAI

./: .coverage  .dockerignore  .gitignore  AGENTS.md  DockerfileLocal  LICENSE  Makefile  README.md  coverage.xml  initialize.py  maintenance_tool.py  preload.py  prepare.py  pyproject.toml  requirements.dev.txt  requirements.txt  requirements2.txt  run_tunnel.py  run_ui.py  test_litellm.py  test_litellm2.py
.devcontainer/: devcontainer.json
.github/: FUNDING.yml
.github/workflows/: cicd.yml  close-inactive.yml  label-approved.yml  pre-commit.yml  publish.yml  smokeshow.yml  test.yml
agents/_example/prompts/: agent.system.main.role.md
agents/_example/tools/: example_tool.py  response.py
agents/ctx/: agent.yaml
agents/ctx/prompts/: agent.system.main.role.md
agents/default/: agent.yaml
agents/developer/prompts/: agent.system.main.communication.md  agent.system.main.role.md
agents/hacker/prompts/: agent.system.main.environment.md  agent.system.main.role.md
agents/researcher/prompts/: agent.system.main.communication.md  agent.system.main.role.md
backend/api/: agents.py  api_files_get.py  api_log_get.py  api_message.py  api_reset_chat.py  api_terminate_chat.py  backup_create.py  backup_get_defaults.py  backup_inspect.py  backup_preview_grouped.py  backup_restore.py  backup_restore_preview.py  backup_test.py  banners.py  chat_create.py  chat_export.py  chat_files_path_get.py  chat_load.py  chat_remove.py  chat_reset.py  csrf_token.py  ctx_window_get.py  delete_work_dir_file.py  download_work_dir_file.py  edit_work_dir_file.py  file_info.py  get_work_dir_files.py  health.py  history_get.py  image_get.py  load_webui_extensions.py  mcp_server_get_detail.py  mcp_server_get_log.py  mcp_servers_apply.py  mcp_servers_status.py  message.py  message_async.py  message_queue_add.py  message_queue_remove.py  message_queue_send.py  (+32 more)
backend/core/: __init__.py  agent.py  events.py  exceptions.py  models.py
backend/extensions/agent_Agent_handle_exception_end/: _40_handle_intervention_exception.py  _50_handle_repairable_exception.py  _90_handle_critical_exception.py
backend/extensions/agent_init/: _10_initial_message.py  _15_load_profile_settings.py
backend/extensions/banners/: _10_unsecured_connection.py  _20_missing_api_key.py  _30_system_resources.py
backend/extensions/before_main_llm_call/: _10_log_for_stream.py
backend/extensions/error_format/: _10_mask_errors.py
backend/extensions/hist_add_before/: _10_mask_content.py
backend/extensions/hist_add_tool_result/: _90_save_tool_call_file.py
backend/extensions/message_loop_end/: _10_organize_history.py  _90_save_chat.py
backend/extensions/message_loop_prompts_after/: _60_include_current_datetime.py  _65_include_loaded_skills.py  _70_include_agent_info.py  _75_include_workdir_extras.py
backend/services/: __init__.py  agent_service.py  chat_service.py  memory_service.py  project_service.py  skill_service.py
backend/utils/: __init__.py  api.py  attachment_manager.py  backup.py  browser.py  browser_use.py  browser_use_monkeypatch.py  cloudflare_tunnel._py  defer.py  docker.py  document_query.py  email_client.py  errors.py  extension.py  extract_tools.py  faiss_monkey_patch.py  fasta2a_client.py  fasta2a_server.py  file_browser.py  file_tree.py  files.py  git.py  history.py  job_loop.py  kokoro_tts.py  kvp.py  localization.py  log.py  login.py  maintenance.py  mcp_handler.py  mcp_server.py  message_queue.py  migration.py  notification.py  perplexity_search.py  persist_chat.py  playwright.py  plugins.py  print_style.py  (+34 more)
backend/websocket_handlers/: _default.py  dev_websocket_test_handler.py  hello_handler.py  state_sync_handler.py
conf/: model_providers.yaml
docker/base/: Dockerfile  build.txt
docker/run/: Dockerfile  build.txt  docker-compose.yml
docs/: README.md  quickstart.md
docs/agents/: AGENTS.components.md  AGENTS.modals.md  AGENTS.plugins.md
docs/developer/: architecture.md  connectivity.md  contributing-skills.md  extensions.md  mcp-configuration.md  notifications.md  plugins.md  websockets.md
docs/guides/: a2a-setup.md  api-integration.md  contribution.md  mcp-setup.md  projects.md  troubleshooting.md  usage.md
docs/setup/: dev-setup.md  installation.md  vps-deployment.md
lib/browser/: init_override.js
plugins/: README.md
plugins/example_agent/: plugin.yaml
plugins/memory/: plugin.yaml
plugins/plugin_scan/: plugin.yaml
prompts/: agent.system.main.communication_additions.md  agent.system.main.environment.md  agent.system.main.md  agent.system.main.role.md  agent.system.main.tips.py  agent.system.projects.active.md  agent.system.tool.a2a_chat.md  agent.system.tool.browser.md  agent.system.tool.call_sub.py  agent.system.tool.code_exe.md  agent.system.tool.notify_user.md  agent.system.tool.scheduler.md  agent.system.tools.py  fw.document_query.system_prompt.md  fw.initial_message.md
scripts/: clean.sh  docker.sh  lint.sh  maintenance_tool.py  preload.py  prepare.py  run_tests.sh  run_tunnel.py  setup_dev.sh
skills/a0-create-plugin/: SKILL.md
skills/create-plugin/: SKILL.md
skills/create-skill/: SKILL.md
tests/: chunk_parser_test.py  email_parser_test.py  rate_limiter_test.py  test_fasta2a_client.py  test_file_tree_visualize.py  test_http_auth_csrf.py  test_multi_tab_isolation.py  test_persist_chat_log_ids.py  test_settings_developer_sections.py  test_snapshot_parity.py  test_snapshot_schema_v1.py  test_socketio_library_semantics.py  test_socketio_unknown_namespace.py  test_state_monitor.py  test_state_sync_handler.py  test_state_sync_welcome_screen.py  test_websocket_client_api_surface.py  test_websocket_csrf.py  test_websocket_handlers.py  test_websocket_harness.py  test_websocket_manager.py  test_websocket_namespace_discovery.py  test_websocket_namespace_security.py  test_websocket_namespaces.py  test_websocket_namespaces_integration.py  test_websocket_root_namespace.py  test_webui_extension_surfaces.py
webui/: index.html  index.js  login.html
webui/css/: modals.css
webui/js/: api.js  manifest.json  messages.js  sleep.js  transformers@3.0.2.js
(+212 files in other folders)
