[project]
name = "ctxai"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "flask[async]==3.0.3",
    "uvicorn>=0.30.0",
    "python-socketio[asyncio]>=5.14.2",
    "python-dotenv==1.1.0",
    "pydantic==2.11.7",
    "pyyaml==6.0.3",
    "langchain-core==0.3.50",
    "requests==2.32.5",
    "starlette>=0.38.0",
    "a2wsgi==1.10.8",
    "wsproto>=1.2.0",
    "werkzeug>=3.1.6",
    "typer>=0.16.0",
    "rich>=14.3.3",
    "ansio==0.0.1",
    "browser-use==0.7.12",
    "docker==7.1.0",
    "duckduckgo-search==6.1.12",
    "faiss-cpu==1.11.0.post1",
    "fastmcp==2.13.1",
    "fasta2a==0.5.0",
    "flask-basicauth==0.2.0",
    "flaredantic==0.1.5",
    "GitPython==3.1.43",
    "inputimeout==1.0.4",
    "kokoro>=0.9.2",
    "simpleeval==1.0.3",
    "langchain-community==0.3.19",
    "langchain-unstructured==0.1.6",
    "openai-whisper",
    "numba==0.60.0",
    "llvmlite==0.43.0",
    "lxml_html_clean==0.3.1",
    "markdown==3.7",
    "mcp==1.25.0",
    "newspaper3k==0.2.8",
    "paramiko==3.5.0",
    "playwright==1.52.0",
    "pypdf==6.0.0",
    "pytz==2024.2",
    "sentence-transformers==3.0.1",
    "torch==2.4.0",
    "tiktoken==0.8.0",
    "unstructured==0.16.23",
    "unstructured-client==0.31.0",
    "webcolors==24.6.0",
    "nest-asyncio==1.6.0",
    "crontab==1.0.1",
    "markdownify==1.1.0",
    "pymupdf==1.27.1",
    "pytesseract==0.3.13",
    "pdf2image==1.17.0",
    "pathspec>=0.12.1",
    "psutil>=7.0.0",
    "soundfile==0.13.1",
    "imapclient>=3.0.1",
    "html2text>=2024.2.26",
    "beautifulsoup4>=4.12.3",
    "boto3>=1.35.0",
    "exchangelib>=5.4.3",
    "pywinpty==3.0.2; sys_platform == 'win32'",
    "litellm>=1.80.0",
]

[project.scripts]
ctxai = "cli.main:main"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-mock>=3.15.1",
    "pyinstrument==5.1.2",
    "ruff>=0.9.0",
    "pytest-cov>=6.0.0",
]

[tool.setuptools]
package-dir = {"" = "src", "cli" = "cli"}
packages = ["ctxai", "cli"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "W",    # pycodestyle warnings
]
ignore = [
    "E402", # Module level import not at top of file
    "E501", # Line too long
]

[tool.ruff.lint.isort]
known-first-party = ["ctxai", "cli"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
